fix alignment'

--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -81,7 +81,7 @@ body, div, nav, h2, h1, h3, button, html, p {
   flex-direction: column;
   // padding-bottom: 100px;
   color: white;
-  margin-top: 50px;
+  margin-top: 25px;
   // margin-bottom: 200px;
 }
 
@@ -92,6 +92,7 @@ body, div, nav, h2, h1, h3, button, html, p {
 .welcome-text p {
   // margin-bottom: 100px;
   font-size: 18px;
+  text-align: center;
 }
 
 .welcome-text button {
